fable/test/valid/read_star_integer.f
      program prog
      read(5, *) num
      write(6, *) num+1
      end
