fable/test/syntax_error/bad_format_4.f
      program prog
      write(6, '(+2x)')
      end
